--- a/stopwatch-timer.html
+++ b/stopwatch-timer.html
@@ -83,7 +83,22 @@
   margin-top:1.25rem;
   max-height:9.375rem;
   background:transparent;
-  padding: 0 2.8rem;}
+  padding: 0 2.8rem;
+  scrollbar-width: thin;
+  scrollbar-color: var(--light) transparent;}
+
+.laps-container::-webkit-scrollbar {
+  width: 6px;}
+
+.laps-container::-webkit-scrollbar-track {
+  background: transparent;}
+
+.laps-container::-webkit-scrollbar-thumb {
+  background-color: var(--light);
+  border-radius: 6px;}
+
+.laps-container::-webkit-scrollbar-thumb:hover {
+  background-color: var(--light);}
 
 .laps {
   height: 9.375rem; /* örnek sınır */
